--- a/resources/js/assets/styles/global.css
+++ b/resources/js/assets/styles/global.css
@@ -277,33 +277,33 @@ option {
 }
 
 .body-wrap {
-    padding: 1rem;
-    display: flex;
     background-color: rgb(255, 255, 255, .99);
+    padding: 1rem;
+    border-bottom-left-radius: .5rem;
+    border-bottom-right-radius: .5rem;
 }
 
-.body-wrap img {
+.body-section {
+    display: flex;
+}
+
+.body-section img {
     height: 2.5rem;
     width: 2.5rem;
     border-radius: 50%;
 }
 
-.body-wrap:nth-child(3) {
-    border-bottom-left-radius: .5rem;
-    border-bottom-right-radius: .5rem;
-}
-
-.submit-wrap {
+.submit-wrap, .result-wrap {
     font-family: "Roboto", sans-serif;
     font-size: 1.2rem;
     padding: 1rem;
     margin: 0 1rem;
-    width: 100%;
+    /* width: 100%; */
     border-radius: .5rem;
     border: 1px solid #e1e3e1;
 }
 
-.submit-wrap:hover {
+.submit-wrap:hover, .result-wrap:hover {
     box-shadow: 0 1px 2px 0 rgba(60,64,67,0.302), 0 2px 6px 2px rgba(60,64,67,0.149);
     border: 1px solid transparent;
 }
@@ -329,8 +329,8 @@ option {
     color: var(--font-color);
 }
 
-.editor-wrap {
-    padding: 1rem 0;
+.editor-wrap, .select-wrap {
+    padding-bottom: 1rem;
 }
 
 /* Discuss */
@@ -537,13 +537,17 @@ option {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    margin-right: 1rem;
     border-radius: 0.5rem;
     cursor: pointer;
     padding: 0 10px;
     border: 2px solid lightgrey;
     transition: all 0.3s ease;
 }
+
+.wrapper .option.optionConfirm {
+    margin-right: 1rem;
+}
+
 .wrapper .option .dot {
     height: 1rem;
     width: 1rem;
